--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:body>
-    <img src="#{userSession.gravatarUrl}"/>
+    <img src="#{userSession.gravatarUrl}" alt="avatar"/>
     <h:form>
 
         <h:panelGrid columns="4" cellpadding="5">
