--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -1,25 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+<ui:composition template="decorator.xhtml"
+                xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:p="http://primefaces.org/ui">
+    <ui:define name="content">
+        <img src="#{userSession.gravatarUrl}" alt="avatar"/>
+        <h:form>
 
-<h:body>
-    <img src="#{userSession.gravatarUrl}" alt="avatar"/>
-    <h:form>
+            <h:panelGrid columns="4" cellpadding="5">
+                <h:outputLabel for="name" value="Name:" style="font-weight:bold"/>
 
-        <h:panelGrid columns="4" cellpadding="5">
-            <h:outputLabel for="name" value="Name:" style="font-weight:bold"/>
+                <p:inputText id="name" value="#{userSession.userName}" />
 
-            <p:inputText id="name" value="#{userSession.userName}" />
+                <p:commandButton value="Submit" update="display"/>
 
-            <p:commandButton value="Submit" update="display"/>
+                <h:outputText value="#{userSession.userName}" id="display" />
+            </h:panelGrid>
 
-            <h:outputText value="#{userSession.userName}" id="display" />
-        </h:panelGrid>
-
-    </h:form>
-</h:body>
-
-</html>
+        </h:form>
+    </ui:define>
+</ui:composition>
