init users, css

--- a/src/main/webapp/decorator.xhtml
+++ b/src/main/webapp/decorator.xhtml
@@ -9,10 +9,16 @@
     <meta name="description" content="Tauschring Hamburg"/>
     <meta http-equiv="pragma" content="no-cache"/>
     <meta http-equiv="expires" content="0"/>
+    <h:outputStylesheet name="style/style.css"/>
 </h:head>
 <h:body>
-    before
+    <div class="header">
+        <div class="container">
+            <h:graphicImage name="img/logo.gif" alt="logo"/>Tauschring
+            Hamburg
+            <div class="userStuff"></div>
+        </div>
+    </div>
     <ui:insert name="content"/>
-    after
 </h:body>
 </html>
