--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -5,6 +5,7 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:p="http://primefaces.org/ui">
     <ui:define name="content">
+        <div class="container">
         <img src="#{userSession.gravatarUrl}" alt="avatar"/>
         <h:form>
 
@@ -19,5 +20,6 @@
             </h:panelGrid>
 
         </h:form>
+        </div>
     </ui:define>
 </ui:composition>
