--- a/src/main/webapp/decorator.xhtml
+++ b/src/main/webapp/decorator.xhtml
@@ -27,6 +27,8 @@
             </div>
         </div>
     </div>
+    <div class="container, frame">
     <ui:insert name="content"/>
+    </div>
 </h:body>
 </html>
