--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -5,7 +5,7 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:p="http://primefaces.org/ui">
     <ui:define name="content">
-        <div class="container">
+        <div class="container,frame">
         <img src="#{userSession.gravatarUrl}" alt="avatar"/>
         <h:form>
 
