--- a/src/main/webapp/menuDecorator.xhtml
+++ b/src/main/webapp/menuDecorator.xhtml
@@ -1,24 +1,38 @@
 <ui:composition template="decorator.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:p="http://primefaces.org/ui">
     <ui:define name="content">
         <div class="container">
-            <p:menu id="public">
+            <p:menu id="mainMenu">
 
                 <p:menuitem styleClass="#{userSession.activeMenu('dashboard')}" value="Dashboard"
                             outcome="dashboard.xhtml" icon="ui-icon-home"/>
 
+                <p:menuitem styleClass="#{userSession.activeMenu('ring')}" value="Tauschring" outcome="ring.xhtml"
+                            icon="ui-icon-star"/>
+
                 <p:menuitem styleClass="#{userSession.activeMenu('who')}" value="Wer sind wir" outcome="who.xhtml"
+                            icon="ui-icon-star"/>
+
+                <p:menuitem styleClass="#{userSession.activeMenu('news')}" value="Tauschringzeitung"
+                            outcome="news.xhtml"
+                            icon="ui-icon-star"/>
+
+                <p:menuitem styleClass="#{userSession.activeMenu('links')}" value="Links" outcome="links.xhtml"
                             icon="ui-icon-star"/>
 
                 <p:menuitem styleClass="#{userSession.activeMenu('impressum')}" value="Kontakt &amp; Impressum"
                             outcome="impressum.xhtml"
                             icon="ui-icon-star"/>
+
+
+                Links
+
             </p:menu>
-            <ui:insert name="contentWithMenu"/>
+            <div id="contentWithMenu">
+                <ui:insert name="contentWithMenu"/>
+            </div>
         </div>
     </ui:define>
 </ui:composition>
