no more unnecessary h scrolling

--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -108,7 +108,7 @@
             tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci
             tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo
         </div>
-        <div class="container">
+        <div>
             <img src="#{userSession.gravatarUrl}" alt="avatar"/>
 
 
