try fixing themeswitcher wip

--- a/src/main/webapp/menuDecorator.xhtml
+++ b/src/main/webapp/menuDecorator.xhtml
@@ -56,9 +56,9 @@ Environmental damage caused by the use must be kept as small as possible.
             </p:menu>
             </div>
             <div>
-                <p:themeSwitcher style="width:165px" id="defaultSwitcher" value="#{themeSwitcherBean.theme}">
+                <p:themeSwitcher style="width:165px" id="defaultSwitcher" value="#{themeSwitcher.theme}">
                     <f:selectItem itemLabel="Choose Theme" itemValue=""/>
-                    <f:selectItems value="#{themeSwitcherBean.themes}"/>
+                    <f:selectItems value="#{themeSwitcher.themes}"/>
                 </p:themeSwitcher>
             </div>
             <div id="contentWithMenu">
