ensure https with js

--- a/src/main/webapp/decorator.xhtml
+++ b/src/main/webapp/decorator.xhtml
@@ -38,8 +38,7 @@ Environmental damage caused by the use must be kept as small as possible.
     <script>
         if (window.location.protocol != "https:") {
         if (window.location.href.indexOf("http://localhost") == -1){
-        window.location.protocol = "https:";
-        window.location.reload();
+        alert("unsecure! use https");
         }
         }
     </script>
