--- a/src/main/webapp/decorator.xhtml
+++ b/src/main/webapp/decorator.xhtml
@@ -35,11 +35,11 @@ Environmental damage caused by the use must be kept as small as possible.
     <meta http-equiv="pragma" content="no-cache"/>
     <meta http-equiv="expires" content="0"/>
     <h:outputStylesheet name="style/style.css"/>
-    <script>
+    <script type="text/javascript">
         if (window.location.protocol != "https:") {
-        if (window.location.href.indexOf("http://localhost") == -1){
-        alert("unsecure! use https");
-        }
+            if (window.location.href.indexOf("http://localhost") == -1) {
+                alert("unsecure! use https");
+            }
         }
     </script>
 </h:head>
