Advertisement wip - navigation

--- a/src/main/webapp/internal/offers.xhtml
+++ b/src/main/webapp/internal/offers.xhtml
@@ -28,7 +28,7 @@ Environmental damage caused by the use must be kept as small as possible.
                 xmlns:p="http://primefaces.org/ui">
     <ui:define name="contentWithoutMenu">
         <h:form>
-            <p:slideMenu style="width:180px;height: 500;" model="#{adNavigation.addNavigation}"/>
+            <p:slideMenu style="width:180px;" model="#{adNavigation.addNavigation}"/>
             selected: #{userSession.selectedAdvertisement.content}
         </h:form>
     </ui:define>
