--- a/src/main/webapp/internal/offers.xhtml
+++ b/src/main/webapp/internal/offers.xhtml
@@ -29,7 +29,7 @@ Environmental damage caused by the use must be kept as small as possible.
     <ui:define name="contentWithoutMenu">
         <h:form>
             <p:slideMenu style="width:180px;" model="#{adNavigation.addNavigation}"/>
-            selected: #{userSession.selectedAdvertisement.content}
+            <h:outputText id="toUpdate" value="selected: #{userSession.selectedAdvertisement.content}"/>
         </h:form>
     </ui:define>
 </ui:composition>
